[tool.poetry]
name = "raijin"
version = "0.1.0"
description = ""
authors = ["Jared Coughlin <jcoughl3@illinois.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
raijin = 'raijin.console.run:run'
