[tool.poetry]
name = "raijin"
version = "0.1.0"
description = ""
authors = ["Jared Coughlin <jcoughl3@illinois.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
cleo = "^0.8.1"
torch = "1.7.1"
omegaconf = "^2.0.6"
gym = "^0.18.0"
atari-py = "^0.2.6"
torchvision = "0.8.2"
h5py = "^3.2.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
pretty-errors = "^1.2.19"
ipython = "^7.21.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
raijin = 'raijin.console.run:run'
